--- a/src/Style/Home.css
+++ b/src/Style/Home.css
@@ -19,6 +19,11 @@
   flex-direction: column;
   align-items: center;
 }
+.btn.btn-primary {
+  height: 50px;
+  margin:  0;
+  width: 150px;
+}
 
 /* Bloc d'introduction (texte sur l'image) */
 .intro {
@@ -113,6 +118,7 @@ h2 {
   width: 100%;
   height: auto;
   margin-bottom: 1rem;
+  margin: 40px 0 ;
 }
 
 /* Chaque section prend la moitié de l'espace sur grand écran */
