--- a/src/Style/Portfolio.css
+++ b/src/Style/Portfolio.css
@@ -2,10 +2,18 @@ img {
   max-width: 100%;
   height: auto;
 }
-
+.row .row-cols-1 .row-cols-md-3 .g-3 {
+  padding: 0;
+  margin: 0; /* espace en bas entre les sections */
+}
 .card {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   height: 100%; /* Assure que toutes les cartes d'une même ligne ont la même hauteur */
+   border-top: 1px solid rgba(0, 0, 0, 0.175); 
+}
+#id{
+  padding: 0;
+  margin: 0; /* espace en bas entre les sections */
 }
 
 .card:hover {
@@ -15,13 +23,14 @@ img {
 
 .card-img-top {
   width: 100%;
-  height: 200px; /* Hauteur fixe pour les images */
+  height: 200px; 
   object-fit: cover; /* Assure que les images couvrent la zone sans se déformer */
 }
 
 .card-body {
   display: flex;
   flex-direction: column;
+  text-align: center;
   justify-content: space-between; /* Pousse le bouton vers le bas de la carte */
 }
 
@@ -41,4 +50,16 @@ img {
     background-color: #0d6efd;
     color: white;
     border: none;
+    align-self: center;
+}
+
+.card.h-100 {
+  padding: 0;
+}
+.portfolio-container {
+  margin-bottom: 50px; /* espace en bas entre les sections */
+}
+
+.card-footer {
+  text-align: center;
 }
