--- a/src/Style/App.css
+++ b/src/Style/App.css
@@ -3,8 +3,31 @@
   et définition de la police par défaut pour toute l'application.
 */
 * {
-  font-family: 'Nunito Sans', sans-serif;
+  font-family: "Nunito ", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
+h1,
+h2,
+h3 {
+  font-family: "Nunito", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 600;
+  font-style: normal;
+  padding: 0;
+  margin: 0;
+}
+
+.app-container {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+}
+
+.content-wrap {
+  flex: 1;
 }
