--- a/src/Style/Service.css
+++ b/src/Style/Service.css
@@ -8,6 +8,9 @@ img {
     width: 100%;
     height: 100%;
 }
+.text-muted{
+  text-align: center;
+}
 
 /* Texte descriptif dans les cartes */
 .card-text {
